fix: font style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,34 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>kartel</title>
+  <!-- HTML Meta Tags -->
+  <title>Kartel</title>
+  <meta name="description"
+    content="Best Crypto Casino. Biggest crypto crash game. Provably fair & live dealer. Unique bonuses & free lucky spins. Fast withdrawals with USK and KART tokens. Profitable vault.">
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:url" content="https://kartel.games">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Kartel">
+  <meta property="og:description"
+    content="Best Crypto Casino. Biggest crypto crash game. Provably fair & live dealer. Unique bonuses & free lucky spins. Fast withdrawals with USK and KART tokens. Profitable vault.">
+  <meta property="og:image" content="https://ibb.co/p2HNQdM">
+
+  <!-- Twitter Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="kartel.games">
+  <meta property="twitter:url" content="https://kartel.games">
+  <meta name="twitter:title" content="Kartel">
+  <meta name="twitter:description"
+    content="Best Crypto Casino. Biggest crypto crash game. Provably fair & live dealer. Unique bonuses & free lucky spins. Fast withdrawals with USK and KART tokens. Profitable vault.">
+  <meta name="twitter:image" content="https://ibb.co/p2HNQdM">
+
+  <!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+  <link
+    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&amp;family=Barlow+Semi+Condensed:wght@300;400;500&amp;display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="https://srv.fontget.com/font/woff?font=33260">
 </head>
 
 <body>
