fix: leaderboard spell

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
   <meta name="twitter:description"
     content="Best Crypto Casino. Biggest crypto crash game. Provably fair & live dealer. Unique bonuses & free lucky spins. Fast withdrawals with USK and KART tokens. Profitable vault." />
   <meta name="twitter:image" content="https://i.ibb.co/wyn874P/photo1718386583.jpg" />
+  <meta property="telegram:image" content="https://i.ibb.co/wyn874P/photo1718386583.jpg" />
 
   <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
